# luna-kiss-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md
server/: pyproject.toml
server/src/luna_mcp/: __main__.py  build_id.py  cdp_bridge.py  cdp_domains.py  composition.py  config.py  coverage_map.py  debugger.py  degradation.py  event_bus.py  heap_summary.py  hinter.py  hinter_rules.py  js_field_caps.py  lifespan.py  luna_runtime.py  middleware.py  sampling.py  sampling_postproc.py  schema_cache.py  schema_guard.py  server.py  server_helpers.py  source_mapper.py  timeline.py  tmp_cleanup.py  trace_summary.py  typemap_resolver.py  wiring.py
server/src/luna_mcp/asset_optimizer/: __init__.py  catalog.py  plan.py  probe.py  recommender.py  texture_analyzer.py
server/src/luna_mcp/budget/: __init__.py  autotune.py  calibrator.py  costs.py  (+7 more)
server/tests/: conftest.py  test_analysis_tools.py  test_asset_catalog.py  test_asset_recommender.py  test_asset_tools.py  test_backend_detector.py  test_batch.py  test_bisector.py  test_brain_scan.py  test_bridge.py  test_brotli_estimate.py  test_budget.py  test_budget_auto_mode.py  test_budget_autotune.py  test_budget_calibrator.py  test_budget_history.py  test_budget_registry.py  test_build_diff_router.py  test_build_diff_tools.py  test_build_id.py  test_build_indexer.py  test_build_tools.py  test_c2_texture_probe.py  test_c2_unused_modules.py  test_c3_field_caps.py  test_calibrator_wiring.py  test_cdp_bridge_tracing.py  test_cdp_domains.py  test_ci_runner.py  test_code_explainer.py  test_compliance.py  test_composition.py  test_consolidation.py  test_coverage_map.py  test_coverage_tools.py  test_cs_linter.py  test_debug_native_tools.py  test_debugger.py  test_deep_integration.py  test_degradation.py  (+108 more)
(+156 files in other folders)
